syntax = "proto3";
package protos;
option go_package = "../protos";

enum InnerMsgId {
    InnerMsgChan = 0; //通道消息
    InnerMsgCreateRoom = 1;//创建房间
    InnerMsgEnterRoom = 2;//进入房间
    InnerMsgRegServer = 3;//注册服务器
    InnerMsgMaintain = 4;//服务器维护
}


message InnerMsgResp{
    int32 errcode = 1;//错误码
    string errmsg = 2;//错误消息
    oneof any{
        InnerCreateRoomResp createRoom = 3;//创建房间
        InnerEnterRoomResp enterRoom = 4;//进入房间
        InnerRegServerResp regServer = 5;//注册服务器
    }
}

message InnerCreateRoomReq{
    int64 userId = 1;//用户id
    int64 gems = 2;//钻石数量
    string conf = 3;//配置内容
    string sign = 4;//签名
}

message InnerCreateRoomResp{
    string roomId = 1;//房间id
    string serverId = 2;//服务器ID
}


message InnerEnterRoomReq{
    int64 userId = 1;//用户id
    string name = 2;//用户名称
    string roomId = 3;//房间id
    string sign = 4;//签名
}

message InnerEnterRoomResp{
    string token = 1; //token
}

message InnerRegServerReq{
    string id = 1;//服务器id
    string clientIp = 2;//客户端ip
    int32 clientPort = 3;//客户端port
    int32 httpPort = 4;//httpport
    int32 load = 5;//负载量
}

message InnerRegServerResp{
    string ip = 1; //ip
}


message InnerMaintainReq{
    string server_id = 2;//服务器id
    int32  req_state = 3;//请求服务器状态 1-维护 2-解除维护
}