syntax = "proto3";
package protos;
option go_package = "../protos";

message UserLocation{
  int32 roomId = 1;
  int32 seatIndex = 2;
}